# virtual-webauthn

./: .gitignore  Cargo.toml  Makefile  README.md  fido.py  passkey.py  requirements.txt  virtual_webauthn.json  webauthn_server.js  webauthn_server.py
extension/: background.js  content.js  inject.js  manifest.json
server/: main.py  passkey.py
src/: main.rs
