[package]
name = "virtual-webauthn"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "der"] }
aes-gcm = "0.10"
scrypt = "0.11"
sha2 = "0.10"
ciborium = "0.2"
base64ct = { version = "1", features = ["std"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[profile.release]
lto = true
strip = true
